...
  @override
  String fieldsDifferentError(String fieldName) {
    return 'This field must be different from $fieldName.';
  }

  @override
  String get fieldsMismatchError => 'Fields do not match.';

  @override
  String greaterThanFieldError(String fieldName) {
    return 'The value must be greater than $fieldName.';
  }

...
      'Please enter a valid credit card number.';

  @override
  String get invalidDateError => 'Please enter a valid date.';

  @override
  String get invalidEmailError => 'Please enter a valid email address.';

  @override
  String get invalidIpError => 'Please enter a valid IP address.';

  @override
  String get invalidJsonError => 'Please enter valid JSON.';
...
